<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/add_room_image_thumbnail"
                android:background="@drawable/dr_gradient_3_colors"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/open_camera"
                android:src="@drawable/ic_camera"
                android:layout_gravity="center"
                android:layout_width="64dp"
                android:layout_height="64dp" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRoomTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/colorAccentTint"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_room_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccentTint"
                android:hint="@string/title_hint"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etRoomDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/colorAccentTint"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_room_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccentTint"
                android:hint="@string/description_hint"
                android:maxLines="3"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PrimaryTextStyle"
                    android:text="@string/add_location_publicity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/SecondaryTextStyle"
                    android:text="@string/add_location_publicity_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:layout_gravity="center"
                android:id="@+id/swith_location_publicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/PrimaryTextStyle"
                    android:text="@string/add_location_limit_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/SecondaryTextStyle"
                    android:text="@string/add_location_limit_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Switch
                android:layout_gravity="center"
                android:id="@+id/swith_location_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <SeekBar
            android:layout_marginTop="15dp"
            android:id="@+id/location_limit"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="3" />

    </LinearLayout>
</ScrollView>

