...
    <string name="app_name">Apollo</string>
    <string name="room_header">Room</string>
    <string name="add_room">New Room</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="empty_room_message">Room cannot be empty</string>
    <string name="successfully_saved_room_message">Room saved</string>
    <string name="cannot_connect_to_camera_message">Cannot connect to camera</string>
    <string name="take_picture">Add picture</string>
    <string name="take_picture_error">Could not take picture</string>

    <!--testing-->
    <string name="navigation_view_header_title">sample@gmail.com</string>

    <!--navbar-->
...
