<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rooms_list"
        android:background="@color/backgroundGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/rooms_activity_horizontal_margin"
        android:paddingRight="@dimen/rooms_activity_horizontal_margin" />

</android.support.v4.widget.SwipeRefreshLayout>


